we are successfully did the implementation of ad screen